# AID_Task_Killer

./: .gitignore  README.md  pyproject.toml
aid_task_killer/: main.py  parser.py
task_killer/: __init__.py  cache_form.py  constants.py  errors.py  main.py  parser.py  tasks_form.py
task_killer/forms/: __init__.py  cache_form.py  main.py  memory_form.py  power_control_form.py  tasks_form.py
task_killer/functions/: cache_form_functions.py  general_functions.py  main_form_functions.py  power_control_functions.py  tasks_form_functions.py
task_killer/scripts/: start.py
task_killer/server_list/: servers.txt
