[tool.poetry]
name = "aid-task-killer"
version = "0.1.0"
description = ""
authors = ["Ihar <kostyuchik22@gmail.com>"]
readme = "README.md"
packages = [{include = "aid_task_killer"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
