[tool.poetry]
name = "aid-task-killer"
version = "0.1.0"
description = ""
authors = ["Ihar <kostyuchik22@gmail.com>"]
readme = "README.md"
packages = [{include = "aid_task_killer"}]

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
